More CSS changes, cleaning up the layout and correcting several collapsed containers.

--- a/css/style.css
+++ b/css/style.css
@@ -69,17 +69,12 @@ a:active {
     background-color: #2c2f30;
     padding-left: 20px;
     font-size: 1.5em;
+    width: 100%;
+    border: solid;
 }
 
 .arrow {
     display: none; 
-}
-
-.main-footer {
-    color: tomato;
-    background-color: #2c2f30;
-    padding-left: 20px;
-    height: 240px;
 }
 
 .t-border {
@@ -100,22 +95,18 @@ a:active {
 	padding-right: 1em;
 }
 
-.main-header {
-	padding-top: 1.5em;
-	padding-bottom: 1.5em;
-	margin-bottom: 30px;
-}
-
 .main-footer {
+    color: tomato;
 	text-align: center;
-	padding: 2em 0;
+	padding: 1em 0;
 	background: #d9e4ea;
+	height: 180px;
+	margin-bottom: 0;
 }
 
 /* Main Styles ------------------ */
 
-.primary-content, 
-.secondary-content {
+.wrap {
   margin: auto;
   max-width: 900px;
 }
@@ -148,13 +139,9 @@ a:active {
         background-repeat: no-repeat;
     }
 
-	.wrap {
-		min-height: calc(100vh - 89px);
-	}
-
 	.container {
 		width: 90%;
-		max-width: 1150px;
+		max-width: 900px;
 		margin: 0 auto;
 	}
 
@@ -170,5 +157,13 @@ a:active {
 	.main-nav li {
 		margin-left: 12px;
 	}
+	
+	.main-footer {
+    color: tomato;
+	text-align: center;
+	padding: 1em 0;
+	background: #d9e4ea;
+	height: 220px;
+}
 
 }
